lagt in bild astronaut

--- a/style.css
+++ b/style.css
@@ -32,6 +32,12 @@ body {
 /*-----------------Astronaut-----------*/
 /*-------------------------------------*/
 
+.astronaut {
+    background-image: url("../inl-1-to-the-moon-oscarkannerstedt/assets/photos/astronaut.jpg");
+    background-size: cover;
+    background-position: 50% 50%;
+}
+
 .astronaut .heading-box {
     border: 4px solid black;
     width: 10rem;
@@ -40,6 +46,7 @@ body {
     top: 80px;
     left: 40px;
     padding: 20px;
+    font-family: "rubik", sans-serif;
 }
 
 .astronaut .heading-box .text {
@@ -47,8 +54,37 @@ body {
     text-transform: uppercase;
     font-size: 3rem;
     font-weight: 500;
+    margin-bottom: 30px;
 }
 
-.astronaut .heading-box .link {
+/*-------------------------------------*/
+/*-----------------Desktop-------------*/
+/*-------------------------------------*/
 
+@media screen and (min-width: 800px) {
+    .astronaut .heading-box {
+        width: 15rem;
+    }
+    .astronaut .heading-box .link{
+        text-align: right;
+    }
+    .astronaut .heading-box .link span {
+        position: relative;
+        transition: left 0.5s cubic-bezier(0.65, 0, 0.35, 1);
+    }
+    
+    .astronaut .heading-box .link:hover span {
+        left: 10px;
+
+    }
+}
+
+/*-------------------------------------*/
+/*-----------------Dark-mode-----------*/
+/*-------------------------------------*/
+
+@media (prefers-color-scheme: dark) {
+    .astronaut .heading-box .link {
+        color: red;
+    }
 }
