--- a/css/style.scss
+++ b/css/style.scss
@@ -3,7 +3,7 @@
 /*-------------------------------------*/
 
 body {
-    background-color:yellow;
+    font-family: 'rubik' sans-serif;
 }
 
 @media screen and (min-width: 600px) {
@@ -27,6 +27,104 @@ body {
 
 .text-page {
     background-color: white;
+}
+
+/*-------------------------------------*/
+/*-----------------Meny----------------*/
+/*-------------------------------------*/
+
+button {
+    width: 35px;
+    height: 35px; 
+    background: transparent;
+    border: 0;
+    position: fixed;
+    right: 20px;
+    top: 20px;
+    z-index: 2;
+    pointer-events: none;
+}
+
+button .button-span {
+    display: block;
+    width: 25px;
+    height: 3px; 
+    background-color: black;
+    border-radius: 6px;
+    margin-bottom: 4px;
+    position: relative;
+    left: 0;
+    transition: left 0.3s ease-in-out;
+}
+
+input {
+    position: fixed;
+    top: 20px;
+    right: 20px;
+    z-index: 1;
+    width: 35px;
+    height: 35px;
+    opacity: 0;
+    cursor: pointer;
+}
+
+input:hover + .menu button span:nth-child(2) {
+    left: -5px;
+}
+input:checked+.menu button span {
+    position: absolute;
+    transition: all 0.3s ease-in-out;
+}
+input:checked+.menu button span:nth-child(2) {
+    opacity: 0;
+}
+input:checked+.menu button span:nth-child(1) {
+    transform: rotate(45deg);
+}
+input:checked+.menu button span:nth-child(3) {
+    transform: rotate(-45deg);
+}
+
+nav {
+    position: fixed;
+    top: 0;
+    left: o;
+    background-color: rgba(154, 89, 89, 0.5);
+    width: 100vw;
+    height: 100vh;
+    opacity: 0;
+    transition: all 0.3s cubic-bezier(0.075, 0.82, 0.165, 1);
+    visibility: hidden;
+}
+input:checked+.menu nav {
+    visibility: visible;
+    opacity: 1;
+  }
+
+ul {
+    margin: 0;
+    padding: 0;
+    list-style: 0;
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    justify-content: space-evenly;
+    text-align: center;
+}
+
+/*-------------------------------------*/
+/*-----------------Grid----------------*/
+/*-------------------------------------*/
+
+.grid-page {
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
+}
+.col1 {
+    grid-column: 1 / span 6;
+}
+.col2 {
+    grid-column: 7 / span 6;
 }
 
 /*-------------------------------------*/
@@ -62,6 +160,21 @@ body {
 /*-----------------Second page---------*/
 /*-------------------------------------*/
 
+.text-page {
+    background-image:linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url("../assets/photos/raphael-nogueira-svbDI1Pq30s-unsplash.jpg");
+    background-size:cover;
+    color:white;
+    font-family:"Rubik", sans-serif;
+}
+.text-page .wrapper {
+    display: block;
+    position: relative;
+}
+
+.text-page .title-Text-Page {
+    font-size: 2rem; 
+}
+
 .brown {
     outline: 3px solid brown; 
 }
@@ -84,10 +197,6 @@ body {
             left: 10px;
         }
     }
-}
-
-.purple {
-    outline: 3px solid purple;
 }
 
 blockquote {
