--- a/css/style.scss
+++ b/css/style.scss
@@ -3,13 +3,7 @@
 /*-------------------------------------*/
 
 body {
-    font-family: 'rubik' sans-serif;
-}
-
-@media screen and (min-width: 600px) {
-    body {
-        background-color: orange;
-    }
+    font-family: 'rubik';
 }
 
 /*-------------------------------------*/
@@ -18,7 +12,7 @@ body {
 
 .full-height {
     min-height: 100vh;
-    outline: 3px solid orange;
+    
 }
 
 .astronaut {
@@ -41,7 +35,7 @@ button {
     position: fixed;
     right: 20px;
     top: 20px;
-    z-index: 2;
+    z-index: 20;
     pointer-events: none;
 }
 
@@ -61,7 +55,7 @@ input {
     position: fixed;
     top: 20px;
     right: 20px;
-    z-index: 1;
+    z-index: 30;
     width: 35px;
     height: 35px;
     opacity: 0;
@@ -87,9 +81,10 @@ input:checked+.menu button span:nth-child(3) {
 
 nav {
     position: fixed;
+    z-index: 10;
     top: 0;
     left: o;
-    background-color: rgba(154, 89, 89, 0.5);
+    background-color: rgba(248, 240, 240, 0.5);
     width: 100vw;
     height: 100vh;
     opacity: 0;
@@ -110,21 +105,8 @@ ul {
     height: 100%;
     justify-content: space-evenly;
     text-align: center;
-}
-
-/*-------------------------------------*/
-/*-----------------Grid----------------*/
-/*-------------------------------------*/
-
-.grid-page {
-    display: grid;
-    grid-template-columns: repeat(12, 1fr);
-}
-.col1 {
-    grid-column: 1 / span 6;
-}
-.col2 {
-    grid-column: 7 / span 6;
+    font-size: 35px;
+    font-weight: bold;
 }
 
 /*-------------------------------------*/
@@ -145,14 +127,13 @@ ul {
     top: 80px;
     left: 40px;
     padding: 20px;
-    font-family: "rubik", sans-serif bold;
 }
 
 .astronaut .heading-box .text {
     text-align: center;
     text-transform: uppercase;
     font-size: 3rem;
-    font-weight: 500;
+    font-weight: 500 bold;
     margin-bottom: 30px;
 }
 
@@ -164,37 +145,40 @@ ul {
     background-image:linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url("../assets/photos/raphael-nogueira-svbDI1Pq30s-unsplash.jpg");
     background-size:cover;
     color:white;
-    font-family:"Rubik", sans-serif;
+    font-size: 16px;
 }
 .text-page .wrapper {
     display: block;
     position: relative;
+    margin-left: 20px;
+    margin-right: 20px;
 }
 
-.text-page .title-Text-Page {
-    font-size: 2rem; 
-}
-
-.brown {
-    outline: 3px solid brown; 
-}
-
-.grey {
-    outline: 3px solid grey;
+h3 {
+    font-size: 25px; 
+    
 }
 
 .space-ventures {
-    h2 {
+    padding-left: 20px;
+    padding-top: 20px;
+    h2  {
+        margin: auto;
         span:first-of-type {
             display: block; 
             position: relative;
             z-index: 1;
+            font-size: 40px;  
         }
+
         span:nth-of-type(2) {
             position: relative;
-            top: -20px;
+            top: -25px;
             z-index: 0;
-            left: 10px;
+            left: 30px;
+            font-size: 40px;
+            color: pink;
+            
         }
     }
 }
@@ -202,6 +186,7 @@ ul {
 blockquote {
     padding: 0;
     margin: 20px;
+    text-align: center;
     position: relative;
     display: inline; 
     &::before, &::after {
@@ -219,20 +204,22 @@ blockquote {
         right: -26px;
     }
 }
+.text-style {
+    font-size: 16px;
+}
+.grey {
+    margin-top: 20px;
+    font-size: 16px;
+}
 
 .gradient-quote {
     display: none; 
 }
-.yellow {
-    outline: 3px solid yellow;
-}
 
-.red {
-    outline: 3px solid red;
-}
-
-.blue {
-    outline: 3px solid blue;
+.read-more {
+    margin-top: 10px;
+    color: rgb(235, 71, 98); 
+    text-decoration: underline;
 }
 
 .major_tom {
