--- a/css/style.scss
+++ b/css/style.scss
@@ -1,26 +1,9 @@
 /*-------------------------------------*/
-/*------------------Helpers------------*/
-/*-------------------------------------*/
-
-body {
-    font-family: 'rubik';
-}
-
-/*-------------------------------------*/
 /*------------------Layout------------*/
 /*-------------------------------------*/
 
 .full-height {
     min-height: 100vh;
-    
-}
-
-.astronaut {
-    background-color: coral;
-}
-
-.text-page {
-    background-color: white;
 }
 
 /*-------------------------------------*/
@@ -144,8 +127,7 @@ ul {
 .text-page {
     background-image:linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url("../assets/photos/raphael-nogueira-svbDI1Pq30s-unsplash.jpg");
     background-size:cover;
-    color:white;
-    font-size: 16px;
+    line-height: 1.5;
 }
 .text-page .wrapper {
     display: block;
@@ -154,64 +136,132 @@ ul {
     margin-right: 20px;
 }
 
-h3 {
-    font-size: 25px; 
-    
+.title-text-page  {
+        margin-top: 0;
+        position: relative;
+        margin-left: 3rem;
+        font-family: 'Rubik', sans-serif;
+        font-size: 18px;
+        white-space: initial;
+        color: white;
 }
 
 .space-ventures {
     padding-left: 20px;
     padding-top: 20px;
     h2  {
-        margin: auto;
+        margin: 0;
+        padding: 0;
         span:first-of-type {
             display: block; 
             position: relative;
             z-index: 1;
-            font-size: 40px;  
+            font-family: 'Rubik', sans-serif;
+            font-weight: bold;
+            font-size: 55px; 
+            color: white; 
         }
 
         span:nth-of-type(2) {
             position: relative;
-            top: -25px;
+            top: -70px;
+            left: 25px;
             z-index: 0;
-            left: 30px;
-            font-size: 40px;
-            color: pink;
+            font-family: 'Times New Roman', Times,;
+            font-weight: bold;
+            font-size: 70px;
+            color: grey;
             
         }
     }
 }
 
+.main-text-1 {
+    display:block;
+    margin-left: 3rem;
+    margin-right: 20px;
+    font-family: 'Rubik', sans-serif;
+    font-weight: 300;
+    font-size: 18px;;
+    text-align: left;
+    color: white;
+}
+
+.main-text-2 {
+    margin-left: 3rem;
+    margin-right: 15px;
+    font-family: 'Rubik', sans-serif;
+    font-weight: 300;
+    font-size: 18px;
+    text-align: left;
+    color: white;
+}
+
 blockquote {
     padding: 0;
     margin: 20px;
-    text-align: center;
     position: relative;
-    display: inline; 
-    &::before, &::after {
-        content: '"';
-        display: block;
-        position: absolute;
-        font-size: 3rem; 
-    }
-    &::before {
-        top: -10px;
-        left: -19px;
-    }
-    &::after {
-        bottom: -26px; 
-        right: -26px;
-    }
-}
-.text-style {
-    font-size: 16px;
-}
-.grey {
-    margin-top: 20px;
-    font-size: 16px;
 }
 
+.quote {
+    font-family: 'Rubik', sans-serif;
+    font-size: 1.3rem;
+    font-weight: 300;
+    margin-left: 5rem;
+    margin-right: 5rem;
+    margin-bottom: 2.25rem;
+    top: 20px;
+    text-align: left;
+    color: rgb(223, 223, 223);
+}
+
+.main-text-3 {
+    font-family: 'Rubik', sans-serif;
+    font-size: 18px;
+    font-weight: 300;
+    margin-top:0;
+    margin-right: 20px;
+    margin-left: 3rem;
+    color: white;
+}
+
+.main-text-4 {
+    font-family: 'Rubik', sans-serif;
+    font-weight: 300;
+    font-size: 18px;
+    margin-right: 20px;
+    margin-left: 3rem;
+    color: white;
+    top:-10px;
+       
+        span:first-of-type{
+            
+        }
+        span:nth-of-type(2){
+            top: 15px;
+    }
+        span:nth-of-type(3) {
+            top: 15px;
+        }
+}
+
+.link-text{
+    text-align: left;
+    color: rgb(233, 119, 138);
+    font-family: 'Rubik', sans-serif;
+    font-weight: 300;
+    text-decoration: underline;
+    padding-top: 20px;
+    padding-bottom: 70px;
+ }
+
+.arrow {
+    font-size: 1.5rem;
+}
+
+img {
+    display: none;
+}
 .gradient-quote {
     display: none; 
 }
