--- a/css/style.scss
+++ b/css/style.scss
@@ -223,6 +223,7 @@ blockquote {
 .quote {
     font-family: 'Rubik', sans-serif;
     font-size: 1.3rem;
+    font-weight: italic;
     font-weight: 300;
     margin-left: 5rem;
     margin-right: 5rem;
@@ -230,7 +231,7 @@ blockquote {
     top: 20px;
     text-align: left;
     color: rgb(223, 223, 223);
-}
+   }
 
 .main-text-3 {
     font-family: 'Rubik', sans-serif;
@@ -390,9 +391,9 @@ footer {
 
     .quote {
         margin-left: 8rem;
-        font-size: 25px;
-    }
-
+        font-size: 1.5rem;
+     }
+        
     .gradient-quote {
         display: flex;
         margin-top: 150px;
@@ -445,6 +446,7 @@ footer {
 
     footer {
         justify-content: space-between;
+        font-size: 12px;
     }
 }
 
